tests/toy/neg/000952_mutation.toylang
program a = { if a then :; } .
